* If a variable assigned to groups argument is not a factor variable, a warning message is given and then it is coerced to factor. Previously the code would stop.
* If mark.exe fails the output file will be opened in MarkViewer (typically notepad) so the user can view the output file to discern the problem.

RMark 2.1.7 (15 Dec 2013)
--------------------------
NEW FEATURES
* added arguments allgroups, strata.labels, and counts to mark function which are passed to process.data.
* added support for RDMSOpenMCSeas model
* modified code in convert.inp so it would work with url
* added example LASP for MultScalOcc model; note change in MultScalOcc model below under changes

CHANGES 
* removed model list from documentation; currently supported models are listed in MarkModels.pdf
* fixed problem in mark which prevented use of retry with fixed parameters. Thanks to Tommy Garrison for reporting this problem.
* fixed make.mark.model so indices of singular parameters were correct with fixed parameters; thanks to Bret Collier for reporting this problem.
* in extract.mark.output code was added to handle very long model formula in extracting LnL. 
* in make.mark.model, code was changed to output data on multiple lines as in MARK interface; also model name truncated to 160 characters.
* added test in make.mark.model for duplicate names in the design matrix which should not happen. It reports the duplicated names with a message to contact me.
* modified structure of MultScalOcc model to match changes in MARK (Psi, Theta (primary), p(secondary); note that previous structure is no longer valid.
* modified parameters.txt for p parameter in RDMSOccRepro so time file would be numbered correctly. Also, changed definition of pent for all models except POPAN such that it aligns with MARK in that the last pent is computed by subtraction. This just changed values for design data.

BUG FIXES