@@ -130,7 +130,7 @@ function(model,parameter,beta=NULL,se=FALSE,design=NULL,data=NULL,vcv=FALSE,show
   model=load.model(model)
   if(is.null(model$results)) 
   {
-     cat("Model output is not available\n")
+     message("Model output is not available\n")
      invisible()
   }
 #
